# vps_framework_ag

./: .gitattributes  .gitignore  README.md  README_VPS_FRAMEWORK_CLEAN.md  full_solution_closure_report.md  implementation_plan.md  main.py  pyproject.toml  unified_v2_plan.md  v1_closure_report.md  v2_closure_report.md
cli/: __init__.py  deploy_commands.py  host_commands.py  operate_commands.py  project_commands.py
config/: __init__.py  host_config.py  project_config.py
docs/: AUDIT_PROJECT_SPEC.md  AUDIT_VPS_SPEC.md  BACKUP_PROJECT_SPEC.md  CODEX_DEVELOPMENT_PROTOCOL.md  DEPLOY_BASELINE_CONTRACT.md  DEPLOY_BASELINE_FDD.md  DEPLOY_BASELINE_TDD.md  DEPLOY_PROJECT_SPEC.md  ENGINEERING_RULES.md  FRAMEWORK_ARCHITECTURE_MODEL.md  HOST_BASELINE_CONTRACT.md  HOST_BASELINE_FDD.md  HOST_BASELINE_TDD.md  HOST_SLICE_02_DOCKER_COMPOSE_ADDENDUM.md  NEW_PROJECT_SPEC.md  OPERATE_BASELINE_CONTRACT.md  OPERATE_BASELINE_FDD.md  OPERATE_BASELINE_TDD.md  OPERATE_SLICE_01_BACKUP_AUDIT_PRECISION_ADDENDUM.md  PROJECT_BASELINE_CONTRACT.md  PROJECT_BASELINE_FDD.md  PROJECT_BASELINE_TDD.md  PYTHON_IMPLEMENTATION_BASELINE.md  VPS_TESTING_GUIDE.md
models/: __init__.py  check_result.py  command_result.py  deploy_result.py  enums.py  operate_result.py  project_result.py  reconcile_result.py
modules/: __init__.py
pytest_tmp_full/: test_classify_blocked_frameworcurrent  test_classify_blocked_malformecurrent  test_classify_blocked_not_a_dicurrent  test_classify_blocked_partial_current  test_classify_blocked_unallowecurrent  test_classify_clean_empty_dircurrent  test_inspect_missing_yamlcurrent  (+30 more)
(+81 files in other folders)
