[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vps-framework"
version = "0.1.0"
description = "Modular Python-based CLI framework for VPS preparation, validation and management"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
]

[tool.setuptools.packages.find]
include = ["cli*", "config*", "models*", "modules*", "utils*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
vps = "main:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
